--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,13 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.1.3",
+        "@supabase/supabase-js": "^2.39.0",
         "axios": "^1.6.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongoose": "^8.0.3",
-        "openai": "^4.20.1",
-        "@supabase/supabase-js": "^2.39.0"
+        "mongoose": "^8.0.3"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
